--- a/main.css
+++ b/main.css
@@ -23,6 +23,8 @@ body {
 a {
     color: #e5554d;
     text-decoration: none;
+    position: relative;
+    z-index: 10000;
 }
 
 h1, h2, h3, time {
